# UserFeaturesTracker

./: .gitignore  LICENSE  README.md
CubeEyesMover/: Assembly-CSharp.csproj  CubeEyesMover.sln  UpgradeLog.htm
UserFeaturesTracker/: CMakeLists.txt  UserFeaturesTracker.sln  build.sh
UserFeaturesTracker/UserFeaturesTracker/: UserFeaturesTracker.hpp  UserFeaturesTracker.vcxproj  UserFeaturesTracker.vcxproj.filters  calibration.cpp  main.cpp  pupilDetector.cpp  pupilDetector.hpp  regression.hpp
UserFeaturesTracker/UserFeaturesTracker/x64/Debug/: vc143.idb
UserFeaturesTracker/UserFeaturesTracker/x64/Debug/UserFeat.bf0eed57.tlog/: UserFeaturesTracker.lastbuildstate
UserFeaturesTracker/UserFeaturesTracker/x64/Release/: UserFeaturesTracker.dll.recipe
UserFeaturesTracker/UserFeaturesTracker/x64/Release/UserFeat.bf0eed57.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UserFeaturesTracker.lastbuildstate  UserFeaturesTracker.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
UserFeaturesTracker/UserFeaturesTrackerTest/: Source.cpp  UserFeaturesTrackerTest.vcxproj
UserFeaturesTracker/UserFeaturesTrackerTest/x64/Release/: UserFeaturesTrackerTest.exe.recipe  UserFeaturesTrackerTest.iobj  UserFeaturesTrackerTest.ipdb
UserFeaturesTracker/cmake/: NoInSourceBuilds.cmake
UserFeaturesTracker/include/: calibration.hpp  helpers.hpp  regression.hpp
UserFeaturesTracker/src/: Source.cpp  calibration.cpp  helpers.cpp  main.cpp  regression.cpp
UserFeaturesTracker/x64/Release/: UserFeaturesTracker.exp  UserFeaturesTracker.lib
(+21 files in other folders)
